# paralax

./: CMakeLists.txt  cilindr.cpp  cilindr.h  paralax.cpp
cilindr/: CMakeLists.txt  cilindr.cpp  cilindr.h
